--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-qr-reader": "^2.1.3",
+    "@types/w3c-image-capture": "^1.0.2",
     "typescript": "^4.0.5"
   }
 }
